# maip

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  merged.json
.github/workflows/: docker.yml  rust.yml
src/: json_string_or_vec.rs  lib.rs  main.rs  policy.rs
src/cli/: cli.rs  command.rs  mod.rs
src/cli/commands/: merge.rs  mod.rs
src/commands/: merge.rs  mod.rs
src/policy/: condition_statement.rs  condition_statement_serde.rs  merge.rs  mod.rs  policy_document.rs  policy_statement.rs  policy_statement_serde.rs
tests/: merge_policy_document_test.rs  merge_statement_test.rs
tests/assets/: AmazonEC2FullAccessPolicy.json  AmazonRDSFullAccessPolicy.json  merge_statement_test.rs
