[package]
name = "maip"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.0"
aws-sdk-iam = "0.29.0"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.30.0", features = ["full"]}
urlencoding = "2.1.3"
